修复图片显示、权限隔离、管理员登录跳转；清理无用文件